...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Add a New Contact" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="7Cs-k6-7n4">
                                                    <rect key="frame" x="20" y="0.0" width="355" height="43.666667938232422"/>
                                                    <autoresizingMask key="autoresizingMask"/>
...
                    <toolbarItems/>
                    <navigationItem key="navigationItem" title="New" id="Msw-bP-HIu">
                        <barButtonItem key="rightBarButtonItem" title="Close" id="IGd-kM-9BO">
                            <connections>
                                <action selector="close:" destination="NFY-nW-WDm" id="UTN-eO-MHz"/>
...
                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="21P-WC-8yr">
                                            <rect key="frame" x="164" y="7" width="86" height="30"/>
                                            <state key="normal" title="Add Contact">
                                                <color key="titleColor" red="0.4541509151" green="0.72539824249999996" blue="0.68004375699999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                            </state>
...
        <scene sceneID="NU1-8b-G5Q">
            <objects>
                <tableViewController clearsSelectionOnViewWillAppear="NO" id="wDx-jI-G7L" userLabel="Chats" customClass="ActiveChatsViewController" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="oVe-va-MJW">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
...
                                </connections>
                            </barButtonItem>
                            <barButtonItem title="Add" image="plus" catalog="system" id="wNA-vF-ohQ">
                                <connections>
                                    <segue destination="elF-QS-Bpm" kind="presentation" identifier="showNew" id="tor-VM-YxS"/>
...
                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kYa-y4-X5Z">
                            <rect key="frame" x="370" y="6" width="36" height="30"/>
                            <accessibility key="accessibilityConfiguration" label="Send"/>
                            <constraints>
                                <constraint firstAttribute="width" constant="36" id="NRJ-Qj-1DA"/>
...
                                            <connections>
                                                <action selector="addPress:" destination="aFU-Vb-8Jd" eventType="touchUpInside" id="wQZ-la-Glw"/>
                                                <action selector="send:" destination="WjA-je-Xez" eventType="touchUpInside" id="XRf-MC-KAb"/>
                                            </connections>
                                        </button>
...
