...
"Ok" = "Ok";
"Online" = "Online";
"Open Source" = "Open Source";
"Participants" = "Participants";
"Password" = "Password";
"Password cannot be empty" = "Password cannot be empty";
"Permission Requested" = "Permission Requested";
"Photos" = "Photos";
"Play Sounds" = "Play Sounds";
"Please Allow Audio Access" = "Please Allow Audio Access";
"Please enter a password." = "Please enter a password.";
"Please make sure at least one account has connected before trying to add a contact." = "Please make sure at least one account has connected before trying to add a contact.";
"Please make sure at least one account has connected before trying to message someone." = "Please make sure at least one account has connected before trying to message someone.";
...
"QR-Code video error" = "QR-Code video error";
/* QR-Code-Scanner: invalid format */
"We could not find a xmpp related QR-Code" = "We could not find a xmpp related QR-Code";
"XMPP: QR-Code" = "XMPP: QR-Code";
"Not Authorized. Please check your credentials." = "Not Authorized. Please check your credentials.";
"There was a SASL error on the server." = "There was a SASL error on the server.";
"Contact Jid" = "Contact Jid";
"Contacts are usually in the format: username@dom.ain" = "Contacts are usually in the format: username@dom.ain";
"Only shareable for now" = "Only shareable for now";
"Account (%@)" = "Account (%@)";
"Account (new)" = "Account (new)";
"Clear Chat History" = "Clear Chat History";
"Error while decrypting" = "Error while decrypting";
...
