...
                    <rect key="frame" x="0.0" y="0.0" width="414" height="176"/>
                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                    <subviews>
                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" bounces="NO" showsHorizontalScrollIndicator="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="jiV-U5-fDl" customClass="MLResizingTextView">
                            <rect key="frame" x="52" y="146" width="310" height="21"/>
                            <color key="backgroundColor" systemColor="secondarySystemBackgroundColor"/>
                            <accessibility key="accessibilityConfiguration" identifier="NewChatMessageTextField"/>
                            <color key="textColor" systemColor="labelColor"/>
                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
                            <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                            <attributedString key="userComments">
                                <fragment content="#bc-ignore!"/>
                            </attributedString>
...
                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
                            <color key="textColor" systemColor="separatorColor"/>
                            <nil key="highlightedColor"/>
                        </label>
                        <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="p5g-C7-nvT" userLabel="AudioButton">
                            <rect key="frame" x="380" y="141" width="17" height="22"/>
                            <accessibility key="accessibilityConfiguration" identifier="microphone"/>
                            <constraints>
                                <constraint firstAttribute="height" constant="30" id="dpb-If-XvF"/>
                                <constraint firstAttribute="width" constant="36" id="uM4-4m-Jhb"/>
                            </constraints>
                            <fontDescription key="fontDescription" type="system" pointSize="18"/>
                            <state key="normal" image="mic" catalog="system"/>
...
